--- a/index.html
+++ b/index.html
@@ -4,26 +4,22 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Jekyll Template for Project Websites</h1>
-        <p>Simple and modern design for publishing blog posts, documentation and many more things about your project.
-          You can now clone and start to create a website for your project like this one.</p>
-        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Learn more</a></p>
+        <h1>Maths and Problem Solving</h1>
+        <p>A first-year course for computer science students at York St John University, covering number systems,
+            modulo arithmatic, algorithms, logic, set theory, and statistics.</p>
+        <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | relative_url }}" role="button">Get started</a></p>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Jekyll?</h2>
-              <p class="lead">Jekyll is a simple, blog-aware, static site generator. It takes a template
-              directory containing raw text files in various formats, runs it through
-              a converter (like <a href="https://daringfireball.net/projects/markdown/">Markdown</a>)
-              and our <a href="https://github.com/Shopify/liquid/wiki">Liquid</a> renderer, and
-              spits out a complete, ready-to-publish static website suitable
-              for serving with your favorite web server. Jekyll also happens to be the engine
-              behind <a href="https://pages.github.com">GitHub Pages</a>, which means you can use Jekyll
-              to host your project’s page, blog, or website from GitHub’s servers <strong>for
-              free</strong>.</p>
+            <h2 class="header-light regular-pad">What is this course about?</h2>
+              <p class="lead">Computer science developed out of the field of mathematics. Maths is involved in some way
+                  in almost every aspect of computer science, from algorithmic complexity to artificial intellegence, from
+                  human-computer interation research to game design. This course will teach a set of core tools that
+                  will come in handy throughout your studies and future career.
+              </p>
         </div>
         <div class="col-md-6 text-center">
             <img src="{{ "/assets/img/jekyll-dark.png" | relative_url }}" alt="Jekyll logo" class="img-responsive">
@@ -33,22 +29,23 @@ layout: default
     <div class="row">
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Easy to install and publish</h3>
-            <p>Get started by cloning source into GitHub account of your project. Thanks to <a href="https://pages.github.com">GitHub Pages</a>,
-              it will be automatically compiled and published under your account's (or organisation's) subdomain under <code>github.io</code>.
+            <h3 class="text-center">A precice langauge</h3>
+            <p>Maths gives you a precice formal language to communicate ideas. Formal notation avoids ambiguity and confusion.
+                This is essential for writing algorithms or implementing algorithms in code. 
             </p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Modular Styling and Templating</h3>
-            <p>This template uses <a href="https://github.com/twbs/bootstrap-sass">bootstrap-sass</a> along with <a href="https://bootswatch.com/">Bootwatch themes</a>.
-            You can change the theme or write your custom one by overwriting bootstrap sass variables for a different color set, font options, etc.</p>
+            <h3 class="text-center">Write better code</h3>
+            <p>Having a good understanding of mathematical concepts helps you solve problems in code. Using standard mathemtical
+                formalisms like sets and graphs makes your code easier to understand by others.</p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-code-fork" aria-hidden="true"></i></h1>
-            <h3 class="text-center">Git-based source control</h3>
-            <p>Leverage from Git version control system by
-              maintaining your documentation along with the source code; publish the page when you merge to the master branch.</p>
+            <h3 class="text-center">Problem-solving skills</h3>
+            <p>We will be taking a problem-centered approach to learning maths. The analytical thinking needed for maths is the 
+                same that you need for analysing problems.
+            </p>
         </div>
     </div>
 </div>
