--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Maths and Problem Solving</h1>
-        <p>A first-year course for computer science students at York St John University, covering number systems,
+        <h1>Mathematics and Problem Solving</h1>
+        <p>A first-year course for computer science students at York St John University (COM4002M-A), covering number systems,
             modular arithmatic, algorithms, logic, set theory, and statistics.</p>
         <p><a class="btn btn-primary btn-lg" href="{{ "/course/home/" | relative_url }}" role="button">Get started</a></p>
     </div>
@@ -29,8 +29,8 @@ layout: default
     <div class="row">
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-pencil" aria-hidden="true"></i></h1>
-            <h3 class="text-center">A precice langauge</h3>
-            <p>Maths gives you a precice formal language to communicate ideas. Formal notation avoids ambiguity and confusion.
+            <h3 class="text-center">A precise langauge</h3>
+            <p>Maths gives you a precise formal language to communicate ideas. Formal notation avoids ambiguity and confusion.
                 This is essential for writing algorithms or implementing algorithms in code. 
             </p>
         </div>
